# learn-gl

./: .clang-format  CMakeLists.txt
src/: main.cpp
